# ros-mcp-server

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  MCPFUNCTIONS.md  README.md  Untitled.ipynb  pyproject.toml  server.json  server.py  smithery.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clone-metrics.yml  clone-trend.yml  download-metrics.yml  publish.yml  publish_mcp.yml  publish_pypi.yml  ruff.yml  traffic-trend.yml  view-metrics.yml
config/: __init__.py  mcp.json
docs/: contributing.md  governance.md  installation.md
examples/: examples-index.md
examples/1_turtlesim/: README.md
examples/1_turtlesim/docker/: Dockerfile.turtlesim
examples/2_gemini/: README.md
examples/3_limo_mobile_robot/isaac_sim/: README.md
examples/3_limo_mobile_robot/isaac_sim/usd/: limo_example.usd
examples/3_limo_mobile_robot/real_robot/: README.md
examples/3_limo_mobile_robot/real_robot/launch/: limo_base.launch
examples/3_limo_mobile_robot/real_robot/scripts/: cmd_vel_repeat.py
examples/4_unitree_go2/isaac_sim/: README.md
examples/4_unitree_go2/isaac_sim/scripts/: custom_rl_env.py  extension.toml  omniverse_sim.py
examples/4_unitree_go2/real_robot/: README.md
examples/4_unitree_go2/real_robot/scripts/: camera_bridge.py
examples/5_docker_turtlesim/: README.md  docker-compose.yml
examples/5_docker_turtlesim/docker/: Dockerfile.turtlesim
examples/5_docker_turtlesim/docker/scripts/: launch_turtlesim.sh
examples/6_chatgpt/: README.md
examples/7_cursor/: README.md  mcp.json
examples/8_images/: README.md  ros_mcp_images_demo.launch.py
examples/limo/isaac_sim/: README.md
examples/limo/real_robot/: README.md
examples/limo/real_robot/launch/: limo_start.launch
examples/limo/real_robot/scripts/: cmd_vel_repeat.py
examples/turtlesim/: README.md  docker-compose.yml  example_turtlesim.md
examples/turtlesim/docker/: Dockerfile
examples/turtlesim/docker/scripts/: launch_turtlesim.sh
examples/unitree_go2/real_robot/: README.md
examples/unitree_go2/real_robot/scripts/: camera_bridge.py
msgs/geometry_msgs/: __init__.py  twist.py
msgs/sensor_msgs/: __init__.py  image.py  jointstate.py
scripts/: launch_mcp_server.sh  launch_mcp_tunnel.sh  launch_ros.sh
utils/: __init__.py  config_utils.py  network_utils.py  websocket_manager.py
utils/robot_specifications/: YOUR_ROBOT_NAME.yaml  unitree_go2.yaml
